# database

./: .editorconfig  .gitignore  Dockerfile  Makefile  Procfile  README.md  backup_database.sh  docker-compose.yml  production.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: automated_checks.yml  build_docker_images.yml
lrc_database/: manage.py
lrc_database/lrc_database/: asgi.py  settings.py  urls.py  wsgi.py
lrc_database/main/: admin.py  context_processors.py  custom_validators.py  forms.py  models.py  urls.py  views.py
lrc_database/main/management/commands/: bootstrapdatabase.py  exam_reviews.csv  shifts.csv  sis.csv  supervisors.csv
lrc_database/main/migrations/: 0001_initial.py  0002_hardware.py  0003_alter_hardware_isavailable_loan.py
lrc_database/main/static/css/: main.css
lrc_database/main/static/js/: calendar.js
lrc_database/main/templates/: base.html  index.html  list_users.html  user_profile.html
lrc_database/main/templates/courses/: add_course.html  edit_course.html  list_courses.html  view_course.html
lrc_database/main/templates/hardware/: addHardware.html  add_hardware.html  editHardware.html  edit_hardware.html  hardware_table.html
lrc_database/main/templates/includes/: navbar.html  shift_change_request_table.html
lrc_database/main/templates/loans/: addLoans.html  add_loans.html  editLoans  (+3 more)
lrc_database/main/templatetags/: groups.py  schedule.py
lrc_database/main/views/: __init__.py  bulk_shift_editing_views.py  courses.py  hardware.py  schedule.py  shifts.py  users.py
nginx/: Dockerfile  nginx.conf
(+30 files in other folders)
